resolved an overflow issue

--- a/client/styles/style.css
+++ b/client/styles/style.css
@@ -1,5 +1,4 @@
 html, body {
-    overflow: hidden;
     width: 100%;
     height: 100%;
     margin: 0;
@@ -46,6 +45,7 @@ html, body {
 #canvas {
     width: 100%;
     height: 100%;
+    display: none;
 }
 
 .dom-ui {
